syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/chain-capabilities/evm;evm";

package loop.chain_capabilities.evm;

import "loop/internal/pb/relayer.proto";
import "loop/internal/pb/contract_reader.proto";
import "loop/internal/pb/contract_writer.proto";
import "loop/internal/pb/query.proto";
import "google/protobuf/empty.proto";
import "values/pb/values.proto";

service EVM{
  rpc GetTransactionFee(GetTransactionFeeRequest) returns (GetTransactionFeeReply) {}
  rpc CallContract(CallContractRequest) returns (CallContractReply);
  rpc FilterLogs(FilterLogsRequest) returns (FilterLogsReply);
  rpc BalanceAt(BalanceAtRequest) returns (BalanceAtReply);
  rpc EstimateGas(EstimateGasRequest) returns (EstimateGasReply);
  rpc TransactionByHash(TransactionByHashRequest) returns (TransactionByHashReply);
  rpc TransactionReceipt(TransactionReceiptRequest) returns (TransactionReceiptReply);
  rpc LatestAndFinalizedHead(google.protobuf.Empty) returns (LatestAndFinalizedHeadReply);
  rpc QueryTrackedLogs(QueryTrackedLogsRequest) returns (QueryTrackedLogsReply);
  rpc RegisterLogTracking(RegisterLogTrackingRequest) returns (google.protobuf.Empty);
  rpc UnregisterLogTracking(UnregisterLogTrackingRequest) returns (google.protobuf.Empty);
  rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusReply);
}

// ----- Message Types -----
// represents evm-style Address
// [20]byte fix-sized array
message Address {
  bytes address = 1;
}

// represents evm-style hash
// [32]byte fix-sized array
message Hash {
  bytes hash = 1;
}

// represents solidity-spec abi encoded bytes
message ABIPayload {
  bytes abi = 1;
}


// represents simplified evm-style CallMsg
message CallMsg {
  Address from = 1;  // sender address, important for reads relied on msg.sender
  Address to = 2; // contract address
  ABIPayload data = 3; // abi encoded payload 
}

message Topics {
  repeated Hash topic = 1;
}

// represents evm-style log
message Log {
  Address address = 1; // address of the contract emitted the log
  repeated Hash  topics = 2; // indexed log fields 
  Hash tx_hash = 3; // hash of the transaction emmited the log 
  Hash block_hash = 4; // hash of the block containing the log
  ABIPayload data = 5; // encoded log Data
  Hash eventSig = 6; // keccak256 of event signature
  values.BigInt block_number = 7;  // block number containing the log
  uint32 tx_index = 8;  // index of transaction emmited the log
  uint32 index = 9;  // index of the Log within the intire block
  bool removed = 10;  // flag if the log was removed during reorg
}

// represents evm-style filter query
message FilterQuery {
  Hash block_hash = 1; // exact block (cant use from/to)
  values.BigInt fromBlock = 2; // start block range
  values.BigInt toBlock = 3; // end block range
  repeated Address addresses = 4; // contract(s) to filter logs from
  repeated Topics topics = 5;  // filter log by event signature and indexed args
}

// represents evm-style transaction
message Transaction {
  uint64 nonce = 1; // number of txs sent from sender 
  uint64 gas = 2; // max gas allowed per execution (in gas units)
  Address to = 3; // recipient address
  ABIPayload data = 4; // input data for function call payload
  Hash hash = 5; // derived from transaction structure hash
  values.BigInt value = 6; // amount of eth sent in wei
  values.BigInt gas_price = 7; // price for a signle gas unit in wei
}

// represents evm-style receipt
message Receipt {
  uint64 status = 1; // 1 for success 0 for failure
  uint64 gas_used = 2; // gas used by this transaction (in gas units)
  uint64 tx_index = 3; // index of the transaction inside of the block
  Hash block_hash = 4; // block hash containing the transaction
  repeated Log logs = 6; // logs emmited by this transaction
  Hash tx_hash = 7; // hash of the transaction this receipt is for
  values.BigInt effective_gas_price = 8; // actual gas price paid in wei (include after EIP-1559)
  values.BigInt block_number = 9; // block number containing the transaction
  Address contract_address = 10; // address of the contract if this transaction created one
}


// represents filter for polling and caching logs
message LPFilter {
  uint64 max_logs_kept = 1; // maximum number of logs to retain ( 0 = unlimited ) 
  int64 retention_time = 2; // maximum amount of time to retain logs in seconds
  uint64 logs_per_block = 3; // rate limit ( maximum # of logs per block, 0 = unlimited )
  string name = 4; // filter name, has to persist for removing filter
  repeated Address addresses = 5; // list of addresses to include
  repeated Hash event_sigs = 6; // list of possible signatures (aka topic1)
  repeated Hash topic2 = 7; // list of possible values for topic2
  repeated Hash topic3 = 8; // list of possible values for topic3
  repeated Hash topic4 = 9; // list of possible values for topic4
}

message Head {
  uint64 timestamp = 1; // unix timestamp
  values.BigInt block_number = 2;
  Hash hash = 3;
  Hash parent_hash = 4;
}

message Expression {
 oneof evaluator {
    Primitive primitive = 1;
    BooleanExpression boolean_expression = 2;
  }
}

message BooleanExpression {
  BooleanOperator boolean_operator = 1;
  repeated Expression expression = 2;
}

message And {
  repeated Expression expr = 1;
}

message Or {
  repeated Expression expr = 1;
}

message HashValueComparator {
  repeated Hash values = 1;
  ComparisonOperator operator = 2;
}

message ContractAddress {
  Address address = 1;
}

message EventSig {
  Hash eventSig = 1;
}

message EventByWord {
  uint32 word_index = 1;
  repeated HashValueComparator  hashed_value_comparers = 2;
}

message EventByTopic {
  uint64 topic = 1;
  repeated HashValueComparator hashed_value_comparers = 2;
}

// evm-style primitives
// can be used in combination with general primnitives for querying tracked logs
message Primitive {
  oneof primitive {
    loop.Primitive general_primitive = 1;
    ContractAddress contract_address = 2;
    EventSig event_sig = 3;
    EventByWord event_by_word = 4;
    EventByTopic event_by_topic = 5;
  }
}

// ----- Request/Reply Wrappexrs -----
message LatestAndFinalizedHeadReply {
  Head latest = 1;
  Head finalized = 2;
}

message CallContractRequest {
  CallMsg call = 1;
  values.BigInt block_number = 2;
}

message CallContractReply {
  ABIPayload data = 1;
}

// GetTransactionFeeRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.EVMRElayer.GetTransactionFee].
message GetTransactionFeeRequest {
  string transaction_id = 1; // idempotency key used when transaction was submitted
}

// GetTransactionFeeReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.EVMRElayer.GetTransactionFee].
message GetTransactionFeeReply {
  values.BigInt transation_fee = 1; // transaction fee is the cost of transaction execution in Wei
}

message FilterLogsRequest {
  FilterQuery filter_query = 1;
}

message FilterLogsReply {
  repeated Log logs = 1;
}

message BalanceAtRequest {
  Address account = 1;
  values.BigInt block_number = 2;
}

message BalanceAtReply {
  values.BigInt balance = 1; // Balance of the account in wei (10^-18 eth)
}

message EstimateGasRequest {
  CallMsg msg = 1; // simulates tx execution returns approximate amount of gas units needed 
}

message EstimateGasReply {
  uint64 gas = 1; // estimated amount of gas in gas units, needed for tx execution
}

message TransactionByHashRequest {
  Hash hash = 1;
}

message TransactionByHashReply {
  Transaction transaction = 1;
}

message TransactionReceiptRequest {
  Hash hash = 1;
} 

message TransactionReceiptReply {
  Receipt receipt = 1;
}

message RegisterLogTrackingRequest {
  LPFilter filter = 1;
}

message UnregisterLogTrackingRequest {
  string filter_name = 1;
}

message QueryTrackedLogsRequest {
  repeated Expression expression = 1;
  LimitAndSort limit_and_sort = 2;
  Confidence confidence_level = 3;
}

message QueryTrackedLogsReply {
  repeated Log logs = 1;
}

